--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 plugins {
-    id 'java'
-    id 'application'
-    id "com.github.johnrengelman.shadow" version "6.0.0"
+    id 'java-library'
 }
 
 group 'me.skiincraft'
@@ -26,14 +24,10 @@ tasks.withType(JavaCompile) {
 dependencies {
     implementation("net.dv8tion:JDA:4.3.0_277")
     compileOnly(group: 'gnu.trove', name: 'trove', version: '3.0.3')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
     useJUnitPlatform()
-}
-
-application {
-    mainClassName('me.skiincraft.core.Main')
 }
